ingress-nginx-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-html
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-html
  template:
    metadata:
      labels:
        app: simple-html
    spec:
      imagePullSecrets:
      - name: minimus-pull-secret
      containers:
      - name: nginx
        image: reg.mini.dev/nginx:latest
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: simple-html
