ingress-nginx-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-html
spec:
  selector:
    app: simple-html
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
