ingress-nginx-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-html
spec:
  rules:
  - host: simple.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-html
            port:
              number: 80
